added personal config