@@ -4,7 +4,7 @@ plugins {
 }
 
 group = "io.eroshenkoam"
-version = version
+version = "1.0"
 
 allure {
     report {
@@ -21,23 +21,30 @@ allure {
     }
 }
 
-tasks.withType(JavaCompile::class) {
-    sourceCompatibility = "${JavaVersion.VERSION_21}"
-    targetCompatibility = "${JavaVersion.VERSION_21}"
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
+
+tasks.withType<JavaCompile> {
     options.encoding = "UTF-8"
 }
 
-tasks.withType(Test::class) {
+tasks.withType<Test> {
     ignoreFailures = true
     useJUnitPlatform {
-
     }
+
     systemProperty("junit.jupiter.execution.parallel.enabled", "true")
     systemProperty("junit.jupiter.execution.parallel.config.strategy", "dynamic")
-
     systemProperty("junit.jupiter.extensions.autodetection.enabled", "true")
-}
 
+    jvmArgs = listOf(
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED"
+    )
+}
 
 repositories {
     mavenCentral()
@@ -46,8 +53,13 @@ repositories {
 
 dependencies {
     implementation("commons-io:commons-io:2.15.1")
+    implementation("org.apache.commons:commons-io:1.3.2")
     implementation("io.qameta.allure:allure-java-commons:2.29.1")
-    implementation("org.junit.jupiter:junit-jupiter-api:5.12.2")
-    implementation("org.junit.jupiter:junit-jupiter-engine:5.12.2")
-    implementation("org.junit.jupiter:junit-jupiter-params:5.12.2")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.12.2")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.12.2")
+    testImplementation("org.junit.jupiter:junit-jupiter-params:5.12.2")
+    implementation("org.jetbrains:annotations:24.1.0")
+    implementation("org.aspectj:aspectjweaver:1.9.22")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.10.2")
+    testImplementation("org.junit.jupiter:junit-jupiter:5.10.2")
 }
